@@ -476,7 +476,7 @@ endif
 # MIDI objects
 ifneq ($(USE_MIDI),yes)
 SYSOBJ_MIDI:= midi_nul.o
-EXT_FLAGS += -DNO_MIDIMUSIC
+EXT_FLAGS += -D_NO_MIDIDRV
 else
 ifeq ($(TARGET_OS),win32)
 SYSOBJ_MIDI:= midi_win.o mstrconv.o
