@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-14 (CVS):
+    * hexen2 and hexenworld Makefiles: Minor adjustments.
+
 2010-12-13 (CVS):
     * hexen2 and hexenworld Makefiles: Reorganized.
 
